[gd_scene load_steps=6 format=3 uid="uid://bh22ri2lcdpkp"]

[ext_resource type="Script" path="res://levels/chicken_coop/Game1E/card_stack/card_stack.gd" id="1_wsrr0"]
[ext_resource type="Texture2D" uid="uid://cdqjudvclyui" path="res://levels/chicken_coop/Game1E/card_stack/assets/card_stack1.png" id="2_cpo54"]
[ext_resource type="Texture2D" uid="uid://px1prhxmrlaf" path="res://levels/chicken_coop/Game1E/card_stack/assets/card_stack2.png" id="3_7hs7p"]
[ext_resource type="Texture2D" uid="uid://bptvgd2r161me" path="res://levels/chicken_coop/Game1E/card_stack/assets/card_stack3.png" id="4_wl0lj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpo54"]
size = Vector2(163.806, 128.5)

[node name="CardStack" type="Area2D"]
script = ExtResource("1_wsrr0")

[node name="level1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.805878, 64.5)
scale = Vector2(0.758824, 0.758824)
texture = ExtResource("2_cpo54")

[node name="level2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, 79)
scale = Vector2(0.763977, 0.763977)
texture = ExtResource("3_7hs7p")

[node name="level3" type="Sprite2D" parent="."]
visible = false
position = Vector2(-0.805878, 100.5)
scale = Vector2(0.758824, 0.758824)
texture = ExtResource("4_wl0lj")

[node name="level4" type="Sprite2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.90294, 65.25)
shape = SubResource("RectangleShape2D_cpo54")
